# NMPC_Multi_UAVs_Payload_System_Master_Thesis

./: LICENSE  readme.md
Bash_Terminal_cmds/: bash.txt  run_mpc_parallel.sh
Lab_pc/src/joint_plugin/: package.xml
Lab_pc/src/joint_plugin/src/: plugin.cpp
Lab_pc/src/load_nodes/: package.xml
Lab_pc/src/load_nodes/launch/: ros2_sim.launch.py
Lab_pc/src/mission_handler/: CMakeLists.txt  package.xml
Lab_pc/src/mission_handler/conf/: failure_list.cfg  failure_list_stop_static_pos.cfg  pid_phi_theta_params.cfg  u_eq.txt
Lab_pc/src/mission_handler/include/: Parser.h  failures_handler.hpp  transitions_handler.hpp
Lab_pc/src/mission_handler/src/failures_handler_node/: failures_handler.cpp
Lab_pc/src/mission_handler/src/states_handler_node/: control_algorithms.cpp  control_supports.cpp  failure_monitor.cpp  failure_states_methods.cpp  mpc_failure_handler2.cpp  mpc_main.cpp  mpc_uav1_hover.cpp  preflight_checks.cpp  ref_generator.cpp  states_handler.cpp  states_methods.cpp  trajectory_objects.cpp
Lab_pc/src/mission_handler/src/transitions_handler_node/: transitions_handler.cpp
Lab_pc/src/offboard_rtps/include/: udp_utils.hpp
Lab_pc/src/offboard_rtps/src/: offboard_rtps_handler.cpp
Lab_pc/src/rod_payload_joint_plugin/: CMakeLists.txt
Lab_pc/src/ros2_muavp_interface/: package.xml
Lab_pc/src/ros2_muavp_interface/msg/: ExchangeInfo.msg  FailureAction.msg  InputSetpoint.msg  RigidBodyMeasures.msg  RigidBodyPose.msg
Matlab-simulink_continuous/: .gitignore  analyze_mpc_logs.m  continuous_dynamics_2uav.m  initial_conditions.m  mpc_controller_2uav.m  plot_mpc_results.m  untitled.slx
Matlab_Discrete_version/: replay_anim.m  replay_anim_smooth.m  single_uav_payload_mpc.m  tileFigs.m  uav_mpc_casadi.m  uav_mpc_casadi_rk4.m  uav_mpc_gyro_crt.m  uav_mpc_gyro_crt_make_prof.m  uav_mpc_only_target_casadi_.m  uav_mpc_only_target_casadi_Smooth.m  uav_mpc_small_angle.m  uav_mpc_target.m  uav_mpc_target_casadi.m  uav_mpc_target_casadi_arranged_wrong_weights.m
Mpc_Controller_c++/ros2_ws/src/mission_handler/config/: mpc_main.yaml
Mpc_Controller_c++/ros2_ws/src/mission_handler/src/states_handler_node/: mpc_main_30_states_with_tension.cpp  mpc_uav1_hover.cpp
My_pc_files/ros2_ws/src/mission_handler/: CMakeLists.txt  package.xml
My_pc_files/ros2_ws/src/mission_handler/src/states_handler_node/: input_setpoint_booster.cpp  mpc_failure_handler3.cpp  mpc_main.cpp  mpc_main_30_states.cpp  mpc_uav.cpp  ref_generator.cpp
My_pc_files/ros2_ws/src/ros2_muavp_interface/: CMakeLists.txt
My_pc_files/ros2_ws/src/ros2_muavp_interface/msg/: FailureCheck.msg  ReadySignals.msg  StatesInfo.msg
My_pc_files/ros2_ws/src/ros2_muavp_interface/srv/: FailureInfo.srv
PX4-Autopilot/ROMFS/px4fmu_common/init.d-posix/airframes/: 10020_gazebo-classic_x500  CMakeLists.txt
PX4-Autopilot/Tools/simulation/gazebo-classic/: gazebo_sitl_multiple_run_custom.sh
PX4-Autopilot/Tools/simulation/gazebo-classic/sitl_gazebo-classic/models/my_ground_plane/: model.config  model.sdf.jinja  model.sdf.last_generated
PX4-Autopilot/Tools/simulation/gazebo-classic/sitl_gazebo-classic/models/my_ground_plane/materials/scripts/: my_ground_plane.material
PX4-Autopilot/Tools/simulation/gazebo-classic/sitl_gazebo-classic/models/payload/: model.config  payload.sdf.jinja  payload.sdf.last_generated
PX4-Autopilot/Tools/simulation/gazebo-classic/sitl_gazebo-classic/models/rod_uav/: model.config  rod_uav.sdf.jinja  rod_uav.sdf.last_generated  rod_uav_chill.sdf.last_generated  rod_uav_v0.sdf.jinja  rod_uav_v0.sdf.last_generated  rod_uav_v1.sdf.jinja  rod_uav_v1.sdf.last_generated
PX4-Autopilot/Tools/simulation/gazebo-classic/sitl_gazebo-classic/models/takeoff_plat/: model.config  takeoff_plat.sdf  takeoff_plat.sdf.jinja  takeoff_plat_default.sdf.jinja
PX4-Autopilot/Tools/simulation/gazebo-classic/sitl_gazebo-classic/models/takeoff_plat/materials/scripts/: my_ground_plane.material
PX4-Autopilot/Tools/simulation/gazebo-classic/sitl_gazebo-classic/models/tree_2/: model.sdf
PX4-Autopilot/Tools/simulation/gazebo-classic/sitl_gazebo-classic/models/x500/: model.config  x500.sdf.jinja  x500.sdf.last_generated
PX4-Autopilot/Tools/simulation/gazebo-classic/sitl_gazebo-classic/scripts/: jinja_gen.py
PX4-Autopilot/Tools/simulation/gazebo-classic/sitl_gazebo-classic/worlds/: custom.world  custom_windy.world
PX4-Autopilot/src/modules/uxrce_dds_client/: dds_topics.yaml
Raw_sensor_data/: x500_2_pose_log.txt  x500_3_pose_log.txt
simulation_environment/src/joint_plugin/: CMakeLists.txt
simulation_environment/src/load_nodes/: CMakeLists.txt
simulation_environment/src/mission_handler/conf/: dK_lqr.txt  eq_pt.txt  failure_list_INDOOR.cfg  paths_list.cfg  tasks_list.cfg
simulation_environment/src/mission_handler/include/: common.hpp  states_handler.hpp
simulation_environment/src/mission_handler/src/failures_handler_node/: failures_handler_main.cpp
simulation_environment/src/mission_handler/src/states_handler_node/: formation_optimizer.cpp  input_setpoint_booster_uav1.cpp  input_setpoint_booster_uav2.cpp  input_setpoint_booster_uav3.cpp  mpc_failure_handler3.cpp  mpc_main_30_states_with_tension.cpp  mpc_pid_switcher_x500_1.cpp  mpc_pid_switcher_x500_2.cpp  mpc_pid_switcher_x500_3.cpp  states_handler_main.cpp  utils.cpp
simulation_environment/src/mission_handler/src/transitions_handler_node/: Parser.cpp  transitions_handler_main.cpp
simulation_environment/src/offboard_rtps/: CMakeLists.txt  package.xml
simulation_environment/src/offboard_rtps/include/: offboard_rtps_handler.hpp
simulation_environment/src/offboard_rtps/src/: offboard_rtps_main.cpp
simulation_environment/src/rod_payload_joint_plugin/: package.xml
simulation_environment/src/rod_payload_joint_plugin/src/: plugin.cpp
simulation_environment/src/ros2_muavp_interface/msg/: JointForceTorque.msg  MotorsRpm.msg
simulation_environment/src/ros2_muavp_interface/srv/: PathInfo.srv
