<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mission_handler</name>
  <version>0.0.0</version>
  <description>Finite State Machine handling the quadrotor's behavior</description>
  <maintainer email="andreadelbene95@gmail.com">Andrea Delbene</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>rclcpp</depend>
  <depend>ros2_muavp_interface</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
